--- a/1.00-Part1.Rmd
+++ b/1.00-Part1.Rmd
@@ -4,4 +4,4 @@
 
 # Submitting your work to a journal {- #part1}
 
-Part 1 of this book is about the publication arena. I provide simple explanations of what scientific journals are for, and who the gatekeepers are. The publishing world is at a turning point, and before you start publishing you should be aware of the current trends and what is possible.
+Первая часть этой книги посвящена сфере публикаций. Я даю простые объяснения того, для чего нужны научные журналы и кто такие «привратники». Мир публикаций находится на переломном этапе, и прежде чем начать публиковаться, вы должны знать о современных тенденциях и о том, что с чем можете столкнуться.
