--- a/1.00-introduction.Rmd
+++ b/1.00-introduction.Rmd
@@ -2,28 +2,28 @@
 
 # The reasons for publishing your work {- #part1}
 
-I assume that you will all want to publish the work from your thesis, but it’s worth going through the points here about why publication is so important. 
+Я предполагаю, что все вы захотите опубликовать работы из своих диссертаций, но стоит пройтись по пунктам, почему публикация так важна.
 
-- If your work is unpublished, then it will not be used. Without use, all the work that you put into it falls away.
-- Your published work will become the foundation for future students and academics who are active in your field. This might well be in another country or on another continent.
-- Your work was most likely paid for by tax-payers in the country where you studied. Publishing this work is a way of handing back the value of what you found. If it is published Open Access, the public can also read it for themselves. 
-- Other funders of your thesis work may have made publication a prerequisite of the funding criteria.
-- It is hoped that by publishing your work it will become more accessible to the scientific community.
-- By publishing your work you will find that both you, and your work, become known by an international community that may well invite you to participate in the academic process further [@marks2013misuse].
-- Both inside and outside of science as a career, peer reviewed published papers are seen as an important accomplishment in addition to the production of your thesis.
-- The work that you have already put into your thesis (especially if you have followed the advice in this book!), will mean that you are close to having chapters that can be submitted as publications. 
-- Your advisor and lab colleagues who helped with your thesis work may depend on your publications. 
-- There is a lot of satisfaction to be had by seeing your work published. It has been argued that this depends on who you are and where you come from [@husemann2017publicationism]. 
-- The satisfaction of having someone say how enjoyable or inspiring your work is to read will certainly not be as frequent as if you managed to publish a novel or newspaper column. But when it does happen, it will bring a smile to your face.
+- Если ваша работа не опубликована, значит, она не будет использована. Без использования все вложенные вами силы пропадут.
+- Ваша опубликованная работа станет основой для будущих студентов и ученых, которые будут работать в вашей области. Вполне возможно, что это будет в другой стране или на другом континенте.
+- Ваша работа, скорее всего, была оплачена налогоплательщиками страны, в которой вы учились. Публикация этой работы - это способ вернуть ценность того, что вы нашли. Если работа опубликована в открытом доступе, общественность также может ознакомиться с ней самостоятельно.  
+- Другие организации, финансирующие вашу диссертационную работу, могут сделать публикацию обязательным условием для получения финансирования.
+- Есть надежда, что публикация вашей работы сделает ее более доступной для научного сообщества.
+- Опубликовав свою работу, вы обнаружите, что и вы, и ваша работа стали известны международному сообществу, которое вполне может пригласить вас к дальнейшему участию в научном процессе [@marks2013misuse].
+- Как в науке, так и за ее пределами опубликованные рецензируемые работы рассматриваются как важное достижение в дополнение к написанию диссертации.
+- Работа, которую вы уже проделали над своей диссертацией (особенно если вы следовали советам этой книги!), означает, что вы близки к тому, чтобы подготовить главы, которые можно будет представить в качестве публикаций. 
+- Ваш консультант и коллеги по лаборатории, которые помогали вам в работе над диссертацией, могут зависеть от ваших публикаций. 
+- Увидев свою работу опубликованной, вы получите огромное удовлетворение. Утверждается, что это зависит от того, кто вы и откуда [@husemann2017publicationism]. 
+- Удовольствие от того, что кто-то скажет, как приятно или вдохновляюще читать вашу работу, конечно, не будет таким частым, как если бы вам удалось опубликовать роман или газетную колонку. Но когда это произойдет, на вашем лице появится улыбка.
 
-This is by no means an exhaustive list, but I hope it will give you some insight into the importance of publishing your results. To counter this assertion, please be aware that there is also research that suggests that publication driven science is not healthy, and that we need a new way to motivate science [e.g. @stergiou2014impact]. Indeed, it has been suggested that the ‘publish or perish’ mentality of academia has resulted in the retention (and even deterioration) of poor experimental design, and hence higher false positives in the behavioural sciences [@smaldino2016natural]. We will come back to this later in [part 4](#badscience). However, before you can join the debate about the future, I’d argue that you need to provide your credentials for the present.
+Это далеко не полный список, но я надеюсь, что он даст вам некоторое представление о важности публикации ваших результатов. В противовес этому утверждению, пожалуйста, имейте в виду, что есть исследования, которые говорят о том, что наука, основанная на публикации, не является здоровой, и что нам нужен новый способ мотивации науки [например, @stergiou2014impact]. Действительно, было высказано предположение, что менталитет «публикуйся или погибнешь» в академической среде привел к сохранению (и даже ухудшению) плохого экспериментального дизайна и, следовательно, к более высоким ложноположительным результатам в поведенческих науках [@smaldino2016natural]. Мы вернемся к этому позже в [части 4] (#badscience). Однако прежде чем присоединиться к дебатам о будущем, я бы утверждал, что вам необходимо предоставить свои полномочия в настоящем.
 
-Given that you are reading this book, I will assume that you plan to publish your work. However, there are still some basics that I think it is worth considering in this first part of the book:
+Учитывая, что вы читаете эту книгу, я предположу, что вы планируете опубликовать свои работы. Однако все же есть некоторые основы, которые, на мой взгляд, стоит рассмотреть в этой первой части книги:
 
- - [What is a journal for?](whatjournalfor.html)
- - [What is it possible to publish?](whattowrite.html)
- - [What is peer review](peerreview.html)
- - [What is the journal Impact Factor?](impactfactor.html)
- - [Why are citations important?](citations.html)
+- [Для чего нужен журнал?] (whatjournalfor.html)
+- [Что можно публиковать?](whattowrite.html)
+- [Что такое рецензирование](peerreview.html)
+- [Что такое импакт-фактор журнала?](impactfactor.html)
+- [Почему важны цитаты?](citations.html)
 
 
